--- a/reader.html
+++ b/reader.html
@@ -1,4 +1,5 @@
 
+
 <!DOCTYPE html>
 <html lang="ko">
 <head>
@@ -47,7 +48,7 @@
 <div id="viewer"></div>
 
 <script>
-  const book = ePub("https://rumitokki.github.io/RUMIB/세라자엘1.epub");
+  const book = ePub("serazael1.epub");  // 영어로 된 파일 이름 사용
   const rendition = book.renderTo("viewer", {
     width: "100%",
     height: "100%",
