--- a/reader.html
+++ b/reader.html
@@ -47,7 +47,7 @@
 <div id="viewer"></div>
 
 <script>
-  const book = ePub("serazael1.epub");  // 영어로 된 파일 이름 사용
+  const book = ePub("https://rumitokki.github.io/RUMIB/세라자엘1.epub");
   const rendition = book.renderTo("viewer", {
     width: "100%",
     height: "100%",
