--- a/reader.html
+++ b/reader.html
@@ -4,7 +4,15 @@
   <head>
     <meta charset="utf-8" />
     <title>세라자엘</title>
-    <script src="https://unpkg.com/epubjs/dist/epub.min.js"></script>
+   <script>
+  const book = ePub("https://rumitokki.github.io/RUMIB/serazael1_book.epub");
+  const rendition = book.renderTo("viewer", {
+    width: "100%",
+    height: "100%",
+  });
+  rendition.display();
+</script>
+
     <style>
       body {
         background: pink;
