--- a/reader.html
+++ b/reader.html
@@ -1,25 +1,29 @@
 <!DOCTYPE html>
-<html>
+<html lang="ko">
   <head>
     <meta charset="utf-8" />
-    <title>세라자엘</title>
+    <title>세라자엘 1 - 웹 뷰어</title>
     <script src="https://unpkg.com/epubjs/dist/epub.min.js"></script>
     <style>
       body {
-        background: pink;
+        background: #fff5f7;
+        margin: 0;
         font-family: sans-serif;
       }
       #viewer {
-        height: 90vh;
         width: 100%;
-        border: 1px solid #ddd;
-        background: white;
+        height: 90vh;
+        border: none;
+        margin: 0 auto;
+      }
+      h1 {
+        text-align: center;
+        margin: 1rem;
       }
     </style>
   </head>
   <body>
-    <button onclick="history.back()">← 이전</button>
-    <h1 style="text-align:center">세라자엘</h1>
+    <h1>📖 세라자엘 1</h1>
     <div id="viewer"></div>
 
     <script>
@@ -28,7 +32,17 @@
         width: "100%",
         height: "100%",
       });
-      rendition.display().catch(err => console.error("EPUB 로딩 실패", err));
+
+      rendition.display();
+
+      // optional navigation buttons
+      document.addEventListener("keydown", function (e) {
+        if (e.key === "ArrowRight") {
+          rendition.next();
+        } else if (e.key === "ArrowLeft") {
+          rendition.prev();
+        }
+      });
     </script>
   </body>
 </html>
