--- a/reader.html
+++ b/reader.html
@@ -27,7 +27,7 @@
     <div id="viewer"></div>
 
     <script>
-      const book = ePub("https://rumitokki.github.io/RUMIB/serazael1_book.epub");
+      const book = ePub("https://rumitokki.github.io/RUMIB/serazael1_book_fixed.epub");
       const rendition = book.renderTo("viewer", {
         width: "100%",
         height: "100%",
